# youtube-rag-chatbot

./: .gitignore  README.md  api.py  debug_ingest.py  function_app.py  host.json  ingestion.py  pyproject.toml  requirements.txt
backend/: api.py  constants.py  data_models.py  ingestion.py  rag.py
data/lancedb/transcripts.lance/_transactions/: 0-15053708-9fdb-4842-a56c-fa6cb87955f9.txn  1-add4dabe-19ac-4651-9b98-275fddb8ebb5.txn  2-32ee4a21-8b48-4085-b1e5-1fc716103222.txn  3-52fa1317-0d4a-4e5e-be60-86c0290ee3d8.txn
frontend/: app.py
notebooks/: explorations.ipynb
